<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding"
    tools:context=".dialog.DialogActivity"
    android:background="@color/colorPurpleBackground">

    <Button
        android:id="@+id/btnSimpleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@color/colorAccent"
        android:text="@string/display_simple_dialog"
        app:layout_constraintBottom_toTopOf="@+id/btnShowDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShowDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSimpleDialog"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:text="@string/display_date_picker"
        android:layout_marginBottom="@dimen/small_margin"
        app:layout_constraintBottom_toTopOf="@+id/btnShowChoiceDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnShowChoiceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShowDatePicker"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorAccent"
        android:text="@string/show_choice_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>