<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_padding"
    tools:context=".MainActivity"
    android:background="@color/colorYellowBackground">

    <Button
        android:id="@+id/activity_launch_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/small_padding"
        android:text="@string/launch_toast_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_launch_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_launch_toast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/small_padding"
        android:text="@string/launch_snackbar_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_launch_toast"
        app:layout_constraintTop_toBottomOf="@+id/activity_launch_toast" />

    <Button
        android:id="@+id/activity_launch_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_launch_snackbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/small_padding"
        android:text="@string/launch_dialog_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_launch_snackbar"
        app:layout_constraintTop_toBottomOf="@+id/activity_launch_snackbar" />

</androidx.constraintlayout.widget.ConstraintLayout>